[gd_scene load_steps=13 format=3 uid="uid://bhmvmxvmx7egc"]

[ext_resource type="Script" path="res://CODES/UI/ui_canvas.gd" id="1_m86sx"]
[ext_resource type="Texture2D" uid="uid://beasnqdue75tx" path="res://placa.png" id="2_fahq7"]
[ext_resource type="FontFile" uid="uid://ccgmt7wrmhm7" path="res://ASSETS/fonts/Skranji-Regular.ttf" id="3_iig5f"]
[ext_resource type="Texture2D" uid="uid://cybmas4slyyvi" path="res://ASSETS/UI/barra de puta ops vida1.png" id="3_w8nfs"]
[ext_resource type="Texture2D" uid="uid://781hcgjunqt2" path="res://ASSETS/UI/barra de puta ops vida2.png" id="4_pi23a"]
[ext_resource type="Texture2D" uid="uid://fkwsmtr2ls35" path="res://ASSETS/UI/barra de energia ops vida1.png" id="5_sakub"]
[ext_resource type="Texture2D" uid="uid://b0wjvitvpwjw5" path="res://ASSETS/UI/bf175f2b-e308-41ed-8b7e-07d3a76a0eea-removebg-preview.png" id="6_wuxtp"]
[ext_resource type="Script" path="res://CODES/UI/TEMPO.gd" id="8_my21e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_22unm"]
content_margin_left = 10.0
content_margin_bottom = 0.0

[sub_resource type="Animation" id="Animation_vrujf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Go:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_xfbfl"]
resource_name = "go"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Go:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.00915076, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ecl58"]
_data = {
"RESET": SubResource("Animation_vrujf"),
"go": SubResource("Animation_xfbfl")
}

[node name="UI Canvas" type="CanvasLayer"]
script = ExtResource("1_m86sx")

[node name="Go" type="TextureRect" parent="."]
offset_left = 1151.0
offset_top = 112.0
offset_right = 1279.0
offset_bottom = 240.0
texture = ExtResource("2_fahq7")

[node name="UIGamePlay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="HUDPlayer" type="Control" parent="UIGamePlay"]
layout_mode = 1
anchor_left = 0.025
anchor_top = -4.0
anchor_right = 0.025
anchor_bottom = -4.0
offset_top = 159.0
offset_right = 600.0
offset_bottom = 299.0
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="UIGamePlay/HUDPlayer"]
layout_mode = 0
offset_left = -1.0
offset_top = 1.0
offset_right = 149.0
offset_bottom = 151.0

[node name="Health" type="TextureProgressBar" parent="UIGamePlay/HUDPlayer"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.221429
anchor_right = 0.221667
anchor_bottom = -0.221429
offset_left = 157.0
offset_top = 72.0
offset_right = 550.0
offset_bottom = 126.0
scale = Vector2(0.5, 0.5)
nine_patch_stretch = true
texture_under = ExtResource("4_pi23a")
texture_progress = ExtResource("3_w8nfs")
metadata/_edit_use_anchors_ = true

[node name="Energia" type="TextureProgressBar" parent="UIGamePlay/HUDPlayer"]
layout_mode = 2
anchor_left = -0.005
anchor_top = -0.128571
anchor_right = 0.223333
anchor_bottom = 0.114286
offset_left = 160.0
offset_top = 94.0
offset_right = 549.0
offset_bottom = 114.0
scale = Vector2(0.5, 0.5)
max_value = 50.0
nine_patch_stretch = true
texture_under = ExtResource("4_pi23a")
texture_progress = ExtResource("5_sakub")
metadata/_edit_use_anchors_ = true

[node name="Foto" type="TextureRect" parent="UIGamePlay/HUDPlayer"]
layout_mode = 0
offset_left = -1.0
offset_top = 1.0
offset_right = 149.0
offset_bottom = 151.0
texture = ExtResource("6_wuxtp")
expand_mode = 1

[node name="Name" type="Label" parent="UIGamePlay/HUDPlayer"]
layout_mode = 0
offset_left = 149.0
offset_top = 1.0
offset_right = 542.0
offset_bottom = 43.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_iig5f")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_22unm")
text = "ADAMASTOR "
vertical_alignment = 2

[node name="Cabou" type="Label" parent="UIGamePlay"]
visible = false
layout_mode = 0
offset_left = 367.0
offset_top = 150.0
offset_right = 910.0
offset_bottom = 233.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_iig5f")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxEmpty_22unm")
text = "O TEMPO ACABOU"
horizontal_alignment = 1
vertical_alignment = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ecl58")
}

[node name="Tempo" type="Timer" parent="."]

[node name="TEMPO" type="RichTextLabel" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -208.0
offset_right = -5.0
offset_bottom = 102.0
grow_horizontal = 0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/normal_font = ExtResource("3_iig5f")
theme_override_font_sizes/normal_font_size = 60
text_direction = 2
script = ExtResource("8_my21e")

[node name="Timer" type="Timer" parent="TEMPO"]
autostart = true

[node name="tempoacabou" type="Timer" parent="TEMPO"]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="TEMPO/Timer" to="TEMPO" method="_on_timer_timeout"]
[connection signal="timeout" from="TEMPO/tempoacabou" to="TEMPO" method="_on_tempoacabou_timeout"]
